StringPrototype::jsSpliceSubstringsWithSeparators() doesn't optimally handle 8 bit strings https://bugs.webkit.org/show_bug.cgi?id=99230

Reviewed by Geoffrey Garen.

Added code to select characters8() or characters16() on the not all 8 bit path for both the
processing of the source and the separators.

* runtime/StringPrototype.cpp:
(JSC::jsSpliceSubstringsWithSeparators):


Canonical link: https://commits.webkit.org/117603@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131648 268f45cc-cd09-0410-ab3c-d52691b4dbfc